--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-# Howdy!
-# Welcome to my file.
 <html>
   <head>
     <title>
-      Welcome to Tweebinger's Website.
+      Welcome to Tweebinger's Website!
     </title>
+     <link rel="stylesheet" type="text/css" href="styles.css"
     <h2> 
-      <li><a href="www.google.com">Soundboard</a>a></i>
+      <li><a href="www.google.com">Soundboard</a></i>
     </h2>
   </head>
 </html>
