--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>
       Welcome to Tweebinger's Website!
     </title>
-     <link rel="stylesheet" type="text/css" href="styles.css"
+     <link rel="stylesheet" type="text/css" href="style.css"
     <h2> 
       <li><a href="www.google.com">Soundboard</a></i>
     </h2>
